Fixed PACT and Functional test cases