@@ -1,7 +1,10 @@
 package uk.gov.hmcts.reform.cwrdapi.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import net.thucydides.core.annotations.WithTag;
 import net.thucydides.core.annotations.WithTags;
+import org.apache.commons.lang.RandomStringUtils;
 import org.junit.jupiter.api.Test;
 import org.mockito.Spy;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,23 +17,31 @@ import uk.gov.hmcts.reform.cwrdapi.client.domain.CaseWorkerDomain;
 import uk.gov.hmcts.reform.cwrdapi.client.domain.CaseWorkerProfile;
 import uk.gov.hmcts.reform.cwrdapi.config.RepositoryConfig;
 import uk.gov.hmcts.reform.cwrdapi.config.TestConfig;
+import uk.gov.hmcts.reform.cwrdapi.controllers.request.StaffProfileCreationRequest;
 import uk.gov.hmcts.reform.cwrdapi.domain.CaseWorkerAudit;
 import uk.gov.hmcts.reform.cwrdapi.domain.ExceptionCaseWorker;
 import uk.gov.hmcts.reform.cwrdapi.oidc.JwtGrantedAuthoritiesConverter;
 import uk.gov.hmcts.reform.cwrdapi.repository.ExceptionCaseWorkerRepository;
+import uk.gov.hmcts.reform.cwrdapi.repository.StaffAuditRepository;
 import uk.gov.hmcts.reform.cwrdapi.util.AuditStatus;
 import uk.gov.hmcts.reform.cwrdapi.util.CaseWorkerConstants;
+import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import uk.gov.hmcts.reform.lib.util.serenity5.SerenityTest;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.cwrdapi.util.CaseWorkerConstants.PARTIAL_SUCCESS;
 
 @SerenityTest
@@ -38,7 +49,7 @@ import static uk.gov.hmcts.reform.cwrdapi.util.CaseWorkerConstants.PARTIAL_SUCCE
 @DataJpaTest
 @TestPropertySource(properties = {"spring.config.location=classpath:application-test.yml"})
 @ContextConfiguration(classes = {CaseWorkerRefApiApplication.class, TestConfig.class, RepositoryConfig.class})
-public class ValidationServiceFacadeImplTest {
+class ValidationServiceFacadeImplTest {
 
     @Spy
     @Autowired
@@ -50,9 +61,11 @@ public class ValidationServiceFacadeImplTest {
     @MockBean
     JwtGrantedAuthoritiesConverter jwtGrantedAuthoritiesConverter;
 
-    @Test
-    public void testAuditJsr() {
+    StaffAuditRepository staffAuditRepository = mock(StaffAuditRepository.class);
+    ObjectMapper objectMapper = mock(ObjectMapper.class);
 
+    @Test
+    void testAuditJsr() {
         List<CaseWorkerDomain> caseWorkerProfiles = new ArrayList<>();
         CaseWorkerProfile profile = CaseWorkerProfile.builder().build();
         profile.setRowId(1);
@@ -76,20 +89,64 @@ public class ValidationServiceFacadeImplTest {
         String error = exceptionCaseWorkers.stream()
             .filter(s -> s.getFieldInError().equalsIgnoreCase("firstName"))
             .map(field -> field.getErrorDescription())
-            .collect(Collectors.toList()).get(0);
+            .toList().get(0);
         assertEquals(CaseWorkerConstants.FIRST_NAME_MISSING, error);
     }
 
     @Test
-    public void testInsertAudit() {
+    void testInsertAudit() {
         assertTrue(validationServiceFacadeImpl.updateCaseWorkerAuditStatus(AuditStatus.IN_PROGRESS, "test")
             > 0);
     }
 
     @Test
-    public void testStartAuditJob() {
+    void testStartAuditJob() {
         assertTrue(validationServiceFacadeImpl.startCaseworkerAuditing(AuditStatus.IN_PROGRESS, "test")
             > 0);
     }
+
+    @Test
+    void testSaveStaffAudit() {
+        StaffProfileCreationRequest staffProfileCreationRequest = StaffProfileCreationRequest
+                .staffProfileCreationRequest().build();
+        staffProfileCreationRequest.setFirstName("FirstUser");
+        staffProfileCreationRequest.setLastName("LastUser");
+        validationServiceFacadeImpl.saveStaffAudit(AuditStatus.FAILURE, null,
+                "1234", staffProfileCreationRequest);
+        verify(staffAuditRepository,times(0))
+                .save(any());
+    }
+
+    @Test
+    void testSaveStaffAuditErrorMessage() {
+
+        when(jwtGrantedAuthoritiesConverter.getUserInfo()).thenReturn(UserInfo.builder()
+                .uid(UUID.randomUUID().toString()).build());
+        StaffProfileCreationRequest staffProfileCreationRequest = StaffProfileCreationRequest
+                .staffProfileCreationRequest().build();
+        staffProfileCreationRequest.setFirstName("FirstUser");
+        staffProfileCreationRequest.setLastName("LastUser");
+        String generatedString = RandomStringUtils.randomAlphabetic(513);
+
+        validationServiceFacadeImpl.saveStaffAudit(AuditStatus.FAILURE, generatedString,
+                "1234", staffProfileCreationRequest);
+        verify(staffAuditRepository,times(0))
+                .save(any());
+    }
+
+    @Test
+    void testProcessSomething_JsonProcessingException() throws JsonProcessingException {
+
+        StaffProfileCreationRequest staffProfileCreationRequest = StaffProfileCreationRequest
+                .staffProfileCreationRequest().build();
+        when(objectMapper.writeValueAsString(staffProfileCreationRequest))
+                .thenThrow(JsonProcessingException.class);
+
+        validationServiceFacadeImpl.saveStaffAudit(AuditStatus.FAILURE, null,
+                    "1234", staffProfileCreationRequest);
+        verify(staffAuditRepository,times(0))
+                .save(any());
+    }
+
 }
 
